--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -492,10 +492,10 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 ### Further References
 
-### RedisInsight Overview (RedisConf'20)
+### RedisInsight Overview (RedisConf'21)
 
 <div class="text--center">
-<iframe width="672" height="378" src="https://www.youtube.com/embed/HBC3OSYOgj0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="672" height="378" src="https://www.youtube.com/watch?v=ppYSS6opUiQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 
