--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -495,8 +495,10 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 ### RedisInsight Overview (RedisConf'21)
 
 <div class="text--center">
-<iframe width="672" height="378" src="https://www.youtube.com/watch?v=ppYSS6opUiQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ppYSS6opUiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+  
+
 
 
 
