--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -489,9 +489,6 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 
 
-
-### Further References
-
 ### RedisInsight Overview (RedisConf'21)
 
 <div class="text--center">
@@ -504,7 +501,10 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 ### Further References
 
-- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
+- [Debugging Redis using Slowlog Configuration under RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Manage Your Redis Cluster using RedisInsight](/explore/redisinsight/cluster)
+- [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
+
 
