--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -86,7 +86,7 @@ In order to start a 6 nodes cluster with 3 masters and 3 slaves, just type the f
 
 ## Step 6: Connecting to Redis database
 
-[Follow this link](https://developer.redislabs.com/explore/redisinsight/) to install RedisInsight on your local system.
+[Follow this link](/explore/redisinsight/getting-started) to install RedisInsight on your local system.
  
  
 ![cluster](cluster2.png)
@@ -424,5 +424,6 @@ Also, RedisInsight Cluster Management tool allows you to rebalance your cluster 
 ## Addition Links
 
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
-- [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Visualize Redis database keys using RedisInsight Browser Tool](/explore/redisinsight/browser)
+- [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
