--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -14,8 +14,10 @@ A slow backend load time can have a serious impact on your search engine ranking
 In this tutorial, you will see how to build a shopping cart application using Node.js, Vue.js, Express and Redis.
 
 
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fvjn5fuUxOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-![My Image](shoppingcart.png)
 
 
 ### Content
