--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -10,10 +10,17 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-![My Image](ratelimiting.png)
 
-Rate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes like sharing access to limited resources or limiting the number of requests made to an API endpoint and responding with a 429 status code. In this tutorial, we will see how to implement Rate Limiting using various programming languages: 
 
+Rate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes like sharing access to limited resources or limiting the number of requests made to an API endpoint and responding with a 429 status code. 
+
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_mFWjk7ONa8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+
+In this tutorial, we will see how to implement Rate Limiting using various programming languages: 
 
 <Tabs
   defaultValue="Python"
