--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -13,6 +13,12 @@ import RedisCard from '@site/src/theme/RedisCard';
 Real-time chat is an online communication channel that allows you to conduct real-time conversations. More and more developers are tapping into the power of Redis as it is extremely fast & due to its support for variety of rich data structure such as Lists, Sets, Sorted Sets, Hashes etc. 
 Redis comes along with a Pub/Sub messaging functionality that allows developers to scale the backend by spawning multiple server instances
 
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/miK7xDkDXF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+
 In this tutorial, we will see how to build a basic chat application built with Flask, Socket.IO and Redis.
 This example uses pub/sub feature combined with web-sockets for implementing the message communication between client and server.
 
