--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -10,7 +10,9 @@ An interactive analytics dashboard serves several purposes. They allow you to sh
 
 This tutorial shows a basic analytics dashboard app that uses Redis Bitmap written in NodeJS (JavaScript)
 
-![analytics](analytics_dashboard.png)
+<div class="text--center">
+<iframe width="560" height="415" src="https://www.youtube.com/embed/Ugym4yUeIhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ### Step 1. Prepare the environment
 
