--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -40,6 +40,12 @@ sudo redis-cli -h redislabs.redis.cache.windows.net -p 6379
 redislabs.redis.cache.windows.net:6379>
 ```
 
+### Resources
+
+<div class="text--center">
+<iframe width="760" height="415" src="https://www.youtube.com/embed/eThj-jwViZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ### Next Step
 
 - [Best Practices for Azure Cache for Redis](https://docs.microsoft.com/en-in/azure/azure-cache-for-redis/cache-best-practices)
