--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -174,6 +174,12 @@ Click on the Execute button, and double click on the actors to follow the relati
 
 ![RedisGraph](redisgraph4.png)
 
+### Resources
+
+<div class="text--center">
+<iframe width="760" height="415" src="https://www.youtube.com/embed/NLRbq2FtcIk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 
 ### Next Step 
 
