--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -73,7 +73,7 @@ In order to start a 6 nodes cluster with 3 masters and 3 slaves, just type the f
  ```
 
 
-## Step 5: Set Protected mode off
+## Step 5. Set Protected mode off
 
  ```bash
   redis-cli -c -p 30001
@@ -84,7 +84,7 @@ In order to start a 6 nodes cluster with 3 masters and 3 slaves, just type the f
 
 
 
-## Step 6: Connecting to Redis database
+## Step 6. Connecting to Redis database
 
 [Follow this link](/explore/redisinsight/getting-started) to install RedisInsight on your local system.
  
