--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -197,7 +197,7 @@ In a clustered database, each node can have different values for slow log.  You 
 
 ## Additional Links
 
-- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
