Added RedisGears and RedisGraph

--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -78,6 +78,38 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 </div>
 
+ <div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Profiler Analysis Tool"
+        description="Analyze Your Redis commands using Profiler Analysis tool"
+        page="/explore/redisinsight/profiler"
+        />
+ </div>
+
+
+ <div class="col">
+     <RedisCard
+        title="RedisGraph Browser Tool"
+        imgPath=""
+        description="Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool"
+        preview="redisinsight.png"
+        page="/explore/redisinsight/redisgraph"
+        />
+ </div>
+
+ <div class="col">
+     <RedisCard
+        title="RedisGears Browser Tool"
+        imgPath="redisinsight.png"
+        description="Writing Your Serverless function using RedisGears browser tool"
+        preview="redisinsight.png"
+        page="/explore/redisinsight/redisgears"
+        />
+ </div>
+
+</div>
 
 
 
