--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisgraph
-title: Query, Visualize and Manipulate Graphs using RedisInsight Browser Tool
-sidebar_label: Query and Manipulate Graphs using RedisInsight
+title: Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool
+sidebar_label: Query and Manipulate Graphs using RedisGraph 
 slug: /explore/redisinsight/redisgraph
 ---
 
@@ -22,10 +22,8 @@ RedisInsight supports RedisGraph and allows you to:
 *   Keyboard shortcuts to zoom
 *   Button to reset view; center entire graph
 *   Zoom capability via mouse wheel(Double right-click to zoom out, Double right-click to zoom out.)
-*   UX for large queries; fixed long pause while results are being rendered
-*   Selected node’s size increased to make it easier to distinguish
-*   Added ability to copy commands with a button click
-*   Added ability to persist nodes display choices between queries
+*   Ability to copy commands with a button click
+*   Ability to persist nodes display choices between queries
 
 As a benefit, you get faster turnarounds when building your application using Redis and RedisGraph.
 
