--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -27,11 +27,11 @@ Follow the below steps to get started with the RedisInsight browser tool for Red
 
 ## Step 1. Create Redis database
 
-[Follow this link to run Redis container with RedisGears modules enabled ](/explore/redismod)module compiled**
+[Follow this link to run Redis container with RedisGears modules enabled ](/explore/redismod)
 
 ## Step 2. Run RedisInsight
 
-[Follow this link to setup RedisInsight](/explore/redisinsight/getting-started) on your local machine**
+[Follow this link to setup RedisInsight](/explore/redisinsight/getting-started) on your local machine
 
 ## Step 3.  Clone the repository
 
