--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -111,6 +111,29 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 </div>
 
+ <div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="RedisTimeSeries Browser Tool"
+        description="Managing time-series data using RedisTimeSeries Browser Tool"
+        page="/explore/redisinsight/redistimeseries"
+        />
+ </div>
+
+
+ <div class="col">
+     <RedisCard
+        title="RediSearch Browser Tool"
+        imgPath=""
+        description="Unified Search and Analytics using RediSearch Browser tool"
+        preview="redisinsight.png"
+        page="/explore/redisinsight/redisearch"
+        />
+ </div>
+
+
+</div>
 
 
 
