--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisgears
-title: Writing Your Serverless function using RedisGears browser tool 
-sidebar_label: Writing Your Serverless Function using RedisGears
+title: Writing Your Serverless function using RedisGears Browser Tool 
+sidebar_label: Writing Your Serverless Function using RedisGears Browser Tool
 slug: /explore/redisinsight/redisgears
 ---
 
