--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -158,7 +158,7 @@ Try decreasing the execution time(50 ms), and you will notice that the below run
 ![alt_text](images/image6.png "image_tooltip")
 
 
-## Configuring the execution time 
+## Step 7. Configuring the execution time 
 
 
 Each entry in the slowlog contains four fields: a slowlog entry ID, the Unix timestamp of when the command was run, the execution time in microseconds, and an array with the command itself, along with any arguments. See the example output below:
