--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -183,5 +183,8 @@ Click on the Execute button, and double click on the actors to follow the relati
 
 ### Next Step 
 
+- [Building Movies database app using RedisGraph and NodeJS](/howtos/redisgraphmovies/)
 - Learn more about RedisGraph in the [Quickstart](https://oss.redislabs.com/redisgraph/?_ga=2.186887980.520518125.1606546041-1440690046.1604964523) tutorial.
+- [Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool](/explore/redisinsight/redisgraph)
+- 
 
