--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -21,10 +21,10 @@ Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis 
 ![RedisGraph](redisgraph.png)
 
 
-### Step 3. Connect to a database
+### Step 3. Connect to Redis database
 
 
-Follow [this](explore/redisinsight) link to know how to connect to a database
+[Follow this link](/explore/redisinsight) to learn about RedisInsight - a free Redis GUI to connect to Redis database.
 
 
 
