--- a/docs/develop/C/index-c.mdx
+++ b/docs/develop/C/index-c.mdx
@@ -96,6 +96,15 @@ Run the below command to run Redis server
 </Tabs>
  
 
+## More C Clients Resources
+
+
+- [hiredis-cluster](https://github.com/Nordix/hiredis-cluster) - C client library for Redis Cluster
+
+
+- [libredis](https://github.com/toymachine/libredis) - A C based general low-level PHP extension and client library for Redis, focusing on performance, generality and efficient parallel communication with multiple Redis servers.
+
+- [hiredispool](https://github.com/aclisp/hiredispool) - Provides connection pooling and auto-reconnect for hiredis. It is also minimalistic and easy to do customization.
 
 
 
