--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -29,9 +29,22 @@ Follow the below steps to get started with the RedisInsight browser tool for Red
 
 [Follow this link to run Redis container with RedisGears modules enabled ](/explore/redismod)
 
-## Step 2. Run RedisInsight
+## Step 2: Download RedisInsight
 
-[Follow this link to setup RedisInsight](/explore/redisinsight/getting-started) on your local machine
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 ## Step 3.  Clone the repository
 
