--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -39,9 +39,22 @@ Follow the below steps to see how your data is connected via the RedisInsight Br
 ![alt_text](images/image1.png "image_tooltip")
 
 
-## Step 2. Run RedisInsight tool and connect to the Redis database
+## Step 2: Download RedisInsight
 
-[Follow this link to setup RedisInsight ](https://developer.redislabs.com/explore/redisinsight/getting-started)and connect to the Redis database.
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 ## Step 3: Click “RedisGraph” and then “Add Graph”
 
