--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -20,12 +20,24 @@ In order to understand the capabilities of the browser tool, let us take a simpl
 
 [Follow this link ](https://developer.redislabs.com/create)to create Redis database
 
-## Step 2: Setup RedisInsight
+## Step 2: Download RedisInsight
 
-[Follow this link](https://developer.redislabs.com/explore/redisinsight/getting-started) to set up RedisInsight locally.
 
-## Step 3: Connecting to Redis database
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
+
+## Step 3: Open "Browser Tool"
 
 
 
