--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -84,10 +84,23 @@ In order to start a 6 nodes cluster with 3 masters and 3 slaves, just type the f
 
 
 
-## Step 6. Connecting to Redis database
 
-[Follow this link](/explore/redisinsight/getting-started) to install RedisInsight on your local system.
- 
+## Step 6: Download RedisInsight
+
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”. 
  
 ![cluster](cluster2.png)
 
