--- a/docs/explore/redisinsight/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsight/redisearch/index-redisearch.mdx
@@ -33,9 +33,22 @@ RediSearch allows you to quickly create indexes on datasets (Hashes), and uses a
 
 [Follow this link to create Redis database using Docker container ](/explore/redismod)that comes with RediSearch module enabled
 
-### Step 2. Install RedisInsight
+## Step 2: Download RedisInsight
 
-[Follow this link](/explore/redisinsight/getting-started) to setup RedisInsight locally in your system
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 
 ![alt_text](images/image1.png "image_tooltip")
