--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -29,10 +29,22 @@ With RedisInsight browser tool, you can perform the below sets of activities:
 
 [Follow this link to create Redis database using Docker container ](https://developer.redislabs.com/explore/redismod)that comes with RedisTimeSeries module enabled
 
-## Step 2. Install RedisInsight
+## Step 2: Download RedisInsight
 
-[Follow this link t](https://developer.redislabs.com/explore/redisinsight/getting-started)o setup RedisInsight locally in your system
 
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 ## Step 3. Clone the repository
 
