--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -21,9 +21,22 @@ Follow the below steps to see how Slowlog is leveraged to troubleshoot performan
 
 Follow [https://developer.redislabs.com/create](https://developer.redislabs.com/create) to install and create Redis database
 
-## Step 2: Install RedisInsight
+## Step 2: Download RedisInsight
 
-[Follow this link](https://developer.redislabs.com/explore/redisinsight) to install RedisInsight
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 ## Step 3. Connect to the database using RedisInsight GUI
 
