--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -33,7 +33,27 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
 -   [Install Apache Maven](https://maven.apache.org/install.html)
 -   [Install Redis](https://developer.redislabs.com/create)
 
-## Step 1. Cloning the repository
+
+## Step 1: Download RedisInsight
+
+
+To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+
+[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+
+![My Image](images/redisinsightinstall.png)
+
+
+Run the installer. After the web server starts, open http://YOUR_HOST_IP:8001 and add a Redis database connection.
+
+Select "Connect to a Redis database"
+![My Image](images/redisinsight4.png)
+
+Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
+
+
+
+## Step 2. Cloning the repository
 
 
  ```bash
@@ -43,7 +63,7 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
  ```
 
 
-## Step 2. Run the producer(Post a new message)
+## Step 3. Run the producer(Post a new message)
 
 
  ```bash
@@ -76,7 +96,7 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
  ```
 
 
-## Step 3. Run the consumer(Consume messages)
+## Step 4. Run the consumer(Consume messages)
 
 Open a new terminal and run this command:
 
@@ -89,7 +109,7 @@ Open a new terminal and run this command:
 
 The consumer will start and consume the message you just posted, and wait for any new messages.
 
-## Step 4: Posting the new messages
+## Step 5: Posting the new messages
 
 In the first terminal, post 100 new messages:
 
