--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-memoryanalyzer
-title: Reduce Redis Memory usage using RedisInsight Memory Analyzer Tool
-sidebar_label: Reduce Redis Memory usage with Memory Analyzer 
+title: Manage and Optimize Redis using RedisInsight Memory Analyzer Tool
+sidebar_label: Manage and Optimize Redis with Memory Analyzer 
 slug: /explore/redisinsight/memoryanalyzer
 ---
 
