--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -46,7 +46,7 @@ To install RedisInsight on your local system, you need to first download the sof
 
 If you're using RedisInsight Docker container, you might need to follow the below steps to add a mount point so as to acess the RDB dumps.
 :::
-It is recommended to add a mount point using the -”v” parameter as shown below:
+It is recommended to add a volume mount point using the ”-v” parameter as shown below:
 
 
  ```bash
