--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -136,6 +136,37 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
   </TabItem>
 </Tabs>
 
+### Redis Marketplace
+
+Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages. 
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+
+<div class="row text--center">
+
+<div class="col ">
+<div className="ri-container">
+
+#### Movie Database app in Java
+
+
+![marketplace](images/moviedatabasejava.png)
+
+[Movie Database app in Java](http://marketplace.redislabs.com/?id=project%3Ademo-movie-app-redisearch-java) based on RediSearch capabilities
+</div>
+</div>
+
+<div class="col">
+<div className="ri-container">
+
+#### Leaderboard app in Java 
+
+![marketplace](images/basicleaderboardjava.png)
+
+[How to implement leaderboard app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-java) using Redis & Java(Spring)
+</div>
+</div>
+</div>
+
 ### Ecosystem
 
 As developer you can use the Java client library directly in your application, or you can frameworks like: [Spring](https://spring.io/), [Quarkus](https://quarkus.io/),  [Vert.x](https://vertx.io/), and [Micronaut](https://micronaut.io/).
