--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -55,7 +55,7 @@ For your first steps with Python and Redis, this article will show how to use th
 
 Find more information about Redis & Redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/python/redispy)".
 
-  </TabItem>
+ </TabItem>
 </Tabs>
   
 
@@ -86,6 +86,37 @@ Application that shows how to do rate limiting using various Redis datastructure
 </div>
 
   ---
+
+###  Redis Marketplace
+
+Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+
+<div class="row text--center">
+
+<div class="col ">
+<div className="ri-container">
+
+#### Rate-Limiting app in Python & Django
+
+
+![marketplace](images/ratelimitingdjango.png)
+
+[Rate Limiting app](https://marketplace.redislabs.com/?id=project%3Abasic-rate-limiting-demo-python) built in Python & Django
+</div>
+</div>
+
+<div class="col">
+<div className="ri-container">
+
+#### Leaderboard app in Python & Django
+
+![marketplace](images/leaderboarddjango.png)
+
+[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Python & Django
+</div>
+</div>
+</div>
 
 ### Redis University
 
