--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -131,6 +131,38 @@ Find more information about Golang & Redis connections in the "[Redis Connect](h
   </TabItem>
 </Tabs>
 
+###  Redis Marketplace
+
+Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+
+<div class="row text--center">
+
+<div class="col ">
+<div className="ri-container">
+
+#### Rate-Limiting app in Go
+
+
+![marketplace](images/ratelimitinggo.png)
+
+[Rate Limiting app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-go-lang) built in Go
+</div>
+</div>
+
+<div class="col">
+<div className="ri-container">
+
+#### Leaderboard app in Go
+
+![marketplace](images/leaderboardgo.png)
+
+[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Go
+</div>
+</div>
+</div>
+
+
 ### Technical Articles & Whitepapers
 
 **[Redis and Golang: Designed to Improve Performance](https://redislabs.com/blog/redis-go-designed-improve-performance/)**
