--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -114,6 +114,36 @@ OK
 
 ```
 
+###  Redis Marketplace
+
+Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+
+<div class="row text--center">
+
+<div class="col ">
+<div className="ri-container">
+
+#### Rate-Limiting app in Ruby on Rails
+
+
+![marketplace](images/ratelimitingruby.png)
+
+[Rate Limiting app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-ruby) built in Ruby on Rails
+</div>
+</div>
+
+<div class="col">
+<div className="ri-container">
+
+#### Leaderboard app in Ruby on Rails
+
+![marketplace](images/leaderboardruby.png)
+
+[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-ruby) in Ruby on Rails
+</div>
+</div>
+</div>
 
 ### Further References
 
