--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -113,6 +113,42 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
 ---
 
+###  Redis Marketplace
+
+Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+
+<div class="row text--center">
+
+<div class="col ">
+<div className="ri-container">
+
+#### Hacker News Clone in NodeJS
+
+
+![marketplace](images/hackernewsnodejs.png)
+
+[A Hacker News Clone project](https://marketplace.redislabs.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
+</div>
+</div>
+
+<div class="col">
+<div className="ri-container">
+
+#### Shopping Cart app in NodeJS
+
+![marketplace](images/shoppingcartnodejs.png)
+
+[Shopping Cart app in NodeJS](https://marketplace.redislabs.com/?id=project%3Abasic-redis-shopping-chart-nodejs) module functionalities
+</div>
+</div>
+</div>
+
+---
+
+
+
+
 ### More Developer Resources
 
 <div class="row">
