--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -125,8 +125,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Hacker News Clone in NodeJS
 
-
-![marketplace](images/hackernewsnodejs.png)
+![marketplace](images/hackernews.png)
 
 [A Hacker News Clone project](https://marketplace.redislabs.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
 </div>
